src/App.scss
.App {
  font-family: 'Encode Sans Condensed', sans-serif;
  background-color: powderblue;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.fixed-header {
  position: fixed;
  width: 100%;
}

.social-header {
  padding: 2rem;
  font-size: 1.8rem;
  display: flex;
  justify-content: flex-end;
  background: lightgray;

  a {
    text-decoration: none;
    color: #0f0f0f;

    &:first-of-type {
      margin-right: auto;
    }

    &:not(:last-of-type) {
      padding-right: 2rem;
    }

    .fb {
      width: 22px;
      margin-right: 1rem;
    }
  }
}

.header-spacer {
  height: 131px;
}

.App-header {
  background-color: #282c34;
  height: 7rem;
  font-size: calc(5px + 2vmin);
  color: white;

  nav.nav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    height: 100%;

    a {
      text-decoration: none;
      color: inherit;
      font-weight: 300;
      transition: all 0.3s;
      margin-right: 2rem;

      &:hover {
        color: aqua;
      }

      &:nth-child(2 ), &:nth-child(3) {
        border-right: 1px solid white;
        padding-right: 2rem;
      }
    }
    .home-link {
      margin-right: auto;
      padding-left: 3rem;
      
      .icon {
        fill: white;
        transform: scale(1.7);
        margin: 0 2rem .25rem 0;
        transition: all .3s;

        &:hover {
          fill: aqua;
        }
      }
    }

  }
}

.hero {
  padding: 8rem 4rem 15rem;
  background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.7)), url(./assets/images/switch.jpg);
  background-attachment: fixed;
  background-size: cover;
  background-position: right;
  background-repeat: no-repeat;
  color: white;
  text-shadow: 2px 4px 7px rgba(0, 0, 0, 0.7);
  display: flex;
  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 50% 100%, 0% 90%);

  &__left {
    width: 50%;
    padding: 2rem;

    h1 {
      font-size: 3rem;
      margin-bottom: 0.2rem;
      span {
        font-size: 2.6rem;
      }
    }

    p {
      font-size: 2.4rem;
      width: 80%;
      line-height: 1.75;
    }

    button {
      padding: 1.5rem 3.5rem;
      font-size: 2.6rem;
      color: white;
      background: transparent;
      border: 1px solid white;
      text-transform: uppercase;
      border-radius: 70px;
      cursor: pointer;
      transition: all 0.3s;
      font-weight: bold;
      letter-spacing: 1.75px;
      animation: pulse .75s ease 0s infinite alternate-reverse both;  

      
      .icon.hero-icon {
        fill: white;
        transform: scale(1.75);
        margin-right: 2rem;
        background: transparent;
        transition: all .3s;
        
      }
      &:hover, &:hover .icon.hero-icon {
        color: black;
        fill: black;
        background: aqua;
      }
    }
  }

  &__right {
    font-size: 2.4rem;
    font-weight: bold;
    border-radius: 55px 0 55px 0;
    background: linear-gradient(to top left, rgba(0, 119, 255, .5),  rgba(130, 0, 190, .2));
    flex: 1;
    height: 100%;
    padding: 0 5rem;

    ul {
      padding-inline-start: 0;
    }
    li {
      margin-bottom: .4rem;
      font-weight: normal;
      list-style: none;
    }
  }
}

@keyframes pulse {
  0% {
    box-shadow: 1px 1px 5px 7px rgba(255, 255, 255, 0.1);
  }
  100% {
    box-shadow: 2px 2px 40px 10px rgba(255, 255, 255, 0.4);
  }
}

.icon {
  width: 1.6rem;
  height: 1.6rem;
  margin-right: 1rem;
}


.footer {
  background: lightgray;
  font-size: 1.6rem;
  padding: 2rem;
  display: flex;

  &__left,
  &__right {
    width: 50%;
  }

  &__left {
    display: flex;
    flex-direction: column;

    ul {
      padding-inline-start: 0;
      list-style: none;
      li {
        margin-bottom: 1rem;
      }
    }

    small {
      margin-top: auto;
    }
  }

  &__right {
    p {
      display: flex;
      align-items: center;

      &:nth-of-type(2) {
        padding-left: 2.6rem;
      }
    }

    p a {
      text-decoration: none;
      color: black;
    }
  }
}

main {
  display: flex;
  justify-content: space-evenly;
  padding: 8rem 2rem;
  font-size: 2rem;
  background: powderblue;
}

.modal {
  position: fixed;
  width: 100vw;
  height: 100vh;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  z-index: 20;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  display: none;

  &__container {
    padding: 3rem;
    background: white;
    color: black;

    h2 {
      font-size: 3rem;
      text-transform: uppercase;
    }

    img {
      width: 40rem;
    }

    ul {
      padding: 2rem;
      list-style: none;

      li {
        padding: 0.5rem;
        font-size: 2.4rem;
        text-transform: uppercase;
      }
    }
  }

  span {
    position: absolute;
    top: 2%;
    right: 2%;
    font-size: 3rem;
    color: red;
    font-weight: bold;
  }
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 4rem 2rem;
  background-image:linear-gradient(to bottom right,  rgb(0, 119, 255),  rgb(130, 0, 190));
  color: white;
  border-radius: 7px;
  min-width: 15%;
  min-height: 35rem;
  justify-content: space-between;

  .icon {
    margin-right: 0;
    width: 6rem;
    fill: white;
    height: 6rem;
  }

  button {
    padding: 1.6rem 5rem;
    border-radius: 70px;
    margin-bottom: 2rem;
    font-size: 1.6rem;
    letter-spacing: 1.5px;
    background-color: white;
    color: black;
    border: none;
    cursor: pointer;
    transition: all 0.3s;

    &:hover {
      background-color: black;
      color: white;
    }
  }
}

.modal.active {
  display: flex;
}

